--- a/index.html
+++ b/index.html
@@ -264,16 +264,16 @@
               </div>
             </div>
           </div>
-          <!--<div class="carousel-item">
+          <div class="carousel-item">
             <div class="container">
-              <img class="testimonio-imagen rounded-circle" src="imagenes/cliente3.svg" alt="Foto de Leonardo">
-              <p class="testimonio-texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel iaculis urna. Fusce a ornare enim, vel interdum turpis. Sed aliquam interdum nisi a placerat.</p>
+              <img class="testimonio-imagen rounded-circle" src="imagenes/celexlogo.png" alt="Logo CELEX">
+              <p class="testimonio-texto">El dominio del idioma inglés se ha convertido en una habilidad fundamental, por lo que decidí invertir en una educación de calidad en inglés dentro de esta institución con el objetivo de tener una ventaja competitiva y así, permitirme alcanzar el éxito.</p>
               <div class="testimonio-info">
-                <p class="cliente">Leonardo</p>
-                <p class="cargo">Director de AprendeAProgramar</p>
+                <p class="cliente">CELEX Esime Culhuacán</p>
+                <p class="cargo">Centro de idiomas, IPN</p>
               </div>
             </div>
-          </div>-->
+          </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#testimonios-carrusel" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
